--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -1540,8 +1540,7 @@
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-checkbox sheet-asset-ability"
                                     name="attr_assetcheckbox_owl3">
-                                <div class="sheet-asset-ability"><b>Embodying:</b> When you <em>Face Death</em>, you may
-                                    roll +your owl’s health (instead of +heart) and take +1 momentum on a hit.</div>
+                                <div class="sheet-asset-ability"><b>Embodying:</b> When you <em>Face Death</em>, take your owl’s health as +momentum before you roll.</div>
                             </div>
                         </div>
                         <div class="sheet-asset-track-wrapper">
@@ -1733,8 +1732,8 @@
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-checkbox sheet-asset-ability"
                                     name="attr_assetcheckbox_alchemist3">
-                                <div class="sheet-asset-ability">Add +1 and take +1 momentum on a hit when preparing an
-                                    elixir.</div>
+                                <div class="sheet-asset-ability">When you prepare an elixir, add +1
+                                    and take +1 momentum on a hit.</div>
                             </div>
                         </div>
                     </div>
@@ -1815,14 +1814,22 @@
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-checkbox sheet-asset-ability"
                                     name="attr_assetcheckbox_battlescarred2">
-                                <div class="sheet-asset-ability">You overcome your limitations: Reduce your maximum
-                                    health or spirit by 1 and ignore the max momentum penalty for being maimed.</div>
+                                <div class="sheet-asset-ability">You overcome your limitations:
+                                    Reduce your maximum health by 1.
+                                    Maimed no longer counts as a debility,
+                                    and does not reduce your maximum
+                                    momentum or reset value. When
+                                    you <em>Endure Stress</em> +heart, take +1
+                                    momentum on a strong hit. </div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-checkbox sheet-asset-ability"
                                     name="attr_assetcheckbox_battlescarred3">
-                                <div class="sheet-asset-ability">You have stared down death before: When you are reduced
-                                    to 0 health, take +1 momentum. When you <em>Face Death</em>, add +1.</div>
+                                <div class="sheet-asset-ability">You have stared down death before:
+                                    When you are at 0 health and <em>Endure
+                                    Harm</em>, you may roll +wits or +heart
+                                    (instead of +health or +iron). If you
+                                    do, take +1 momentum on a hit.</div>
                             </div>
                         </div>
                     </div>
@@ -1841,22 +1848,24 @@
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-checkbox sheet-asset-ability"
                                     name="attr_assetcheckbox_bladebound1">
-                                <div class="sheet-asset-ability">When you <em>Enter the Fray</em> or <em>Draw the
-                                        Circle</em> while wielding your kin-blade, take +1 momentum on a hit.</div>
+                                <div class="sheet-asset-ability">When you <em>Enter the Fray</em> or <em>Draw the Circle</em> while wielding your kin-blade,
+                                    add +1 and take +1 momentum on
+                                    a hit.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-checkbox sheet-asset-ability"
                                     name="attr_assetcheckbox_bladebound2">
-                                <div class="sheet-asset-ability">When you <em>Gather Information</em> and fail to score
-                                    a <strong>strong hit,</strong> you may listen to the whispers of your kin-blade for
-                                    guidance and
-                                    reroll any dice. If you do, <em>Endure Stress</em> (2 stress).</div>
+                                <div class="sheet-asset-ability">When you <em>Gather Information</em> by
+                                    listening to the whispers of your kinblade, add +1 and take +2 momentum
+                                    on a hit. Then, <em>Endure Stress</em> (2 stress).
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-checkbox sheet-asset-ability"
                                     name="attr_assetcheckbox_bladebound3">
-                                <div class="sheet-asset-ability">When you inflict harm with your kinblade, you may
-                                    inflict +2 harm. If you do, <em>Endure Stress</em> (2 stress).</div>
+                                <div class="sheet-asset-ability">When you <em>Strike</em> with your kin-blade
+                                    to inflict savage harm (decide before
+                                    rolling), add +1 and inflict +2 harm on
+                                    a hit. Then, <em>Endure Stress</em> (2 stress).</div>
                             </div>
                         </div>
                     </div>
@@ -1897,10 +1906,12 @@
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-checkbox sheet-asset-ability"
                                     name="attr_assetcheckbox_dancer1" checked>
-                                <div class="sheet-asset-ability">When you <em>Secure an Advantage</em> +edge by dancing
-                                    for an audience, add +1 and take +2 momentum on a hit. On a <strong>strong
-                                        hit,</strong> one time
-                                    only, you may also add +2 if you make a move to interact with an audience member.
+                                <div class="sheet-asset-ability">When you <em>Secure an Advantage</em> +edge
+                                    by dancing for an audience, add +1
+                                    and take +2 momentum on a hit. On a
+                                    strong hit, also add +2 (one time only)
+                                    if you make a move to interact with
+                                    someone in the audience.
                                 </div>
                             </div>
                             <div class="sheet-flex-container">
@@ -1940,7 +1951,7 @@
                                     name="attr_assetcheckbox_devotant1" checked>
                                 <div class="sheet-asset-ability">When you say your daily prayers, you may <em>Secure an
                                         Advantage</em> by asking your god to grant a blessing. If you do, roll +your
-                                    god’s stat. On a hit, take +1 momentum.</div>
+                                    god’s stat. On a hit, take +2 momentum.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-checkbox sheet-asset-ability"
@@ -1999,11 +2010,14 @@
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-checkbox sheet-asset-ability"
                                     name="attr_assetcheckbox_fortunehunter1" checked>
-                                <div class="sheet-asset-ability">When you <em>Swear an Iron Vow</em> to a character or
-                                    faction under the promise of payment, add +1. When you successfully <em>Fulfill Your
-                                        Vow</em> to them, take +wealth equal to the rank of the quest. If you then
-                                    leverage wealth when making a move where resources are a factor, add +wealth and
-                                    suffer -1 wealth.</div>
+                                <div class="sheet-asset-ability">When you <em>Swear an Iron Vow</em> to
+                                    someone under the promise of payment,
+                                    add +1 and give the quest a special mark.
+                                    When you successfully <em>Fulfill Your Vow</em>
+                                    to them, take +wealth equal to the rank
+                                    of the quest. If you leverage wealth when
+                                    making a move where resources are a
+                                    factor, add +wealth and suffer -1 wealth.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-checkbox sheet-asset-ability"
@@ -2014,9 +2028,11 @@
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-checkbox sheet-asset-ability"
                                     name="attr_assetcheckbox_fortunehunter3">
-                                <div class="sheet-asset-ability">When you <em>Resupply</em> by looting or scavenging,
-                                    and score a strong hit with a match, you may envision finding an object of value. If
-                                    you do, take +2 wealth.</div>
+                                <div class="sheet-asset-ability">When you <em>Resupply</em> by scavenging or
+                                    looting, and score a strong hit with
+                                    a match, you may envision finding
+                                    an object of value. If you do, take +1
+                                    supply (instead of +2) and +1 wealth.</div>
                             </div>
                         </div>
                         <div class="sheet-asset-track-wrapper">
@@ -2065,15 +2081,17 @@
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-checkbox sheet-asset-ability"
                                     name="attr_assetcheckbox_herbalist2">
-                                <div class="sheet-asset-ability">When you <em>Heal</em> a companion, ally, or other
-                                    character, and you score a hit, take +1 spirit or +1 momentum.</div>
+                                <div class="sheet-asset-ability">When you <em>Heal</em> a companion, ally, or other character, and score a hit, take +1 spirit or +1 momentum.</div>
                             </div>
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-checkbox sheet-asset-ability"
                                     name="attr_assetcheckbox_herbalist3">
-                                <div class="sheet-asset-ability">When you <em>Make Camp</em> and choose the option to
-                                    partake, you can create a restorative meal. If you do, you and your companions may
-                                    take +1 health. Any allies who choose to partake may also take +1 health.</div>
+                                <div class="sheet-asset-ability">When you <em>Make Camp</em> and choose
+                                    the option to partake, you can create
+                                    a restorative meal. If you do, you and
+                                    your companions take +1 health. Any
+                                    allies who choose to partake also take
+                                    +1 health, and do not suffer -supply.</div>
                             </div>
                         </div>
                     </div>
@@ -2099,9 +2117,12 @@
                             <div class="sheet-flex-container">
                                 <input type="checkbox" class="sheet-checkbox sheet-asset-ability"
                                     name="attr_assetcheckbox_honorbound3">
-                                <div class="sheet-asset-ability">When you <em>Fulfill Your Vow</em> and score a weak
-                                    hit, you may reroll any dice as you <em>Swear an Iron Vow</em> to set things right.
-                                    On a <strong>strong hit,</strong> take +1 experience.</div>
+                                <div class="sheet-asset-ability">When you <em>Fulfill Your Vow</em> and score a
+                                    miss, you may reroll one challenge die.
+                                    If you score a miss again, reduce your
+                                    maximum spirit by 1. You may recover
+                                    this lost spirit when you next <em>Fulfill
+                                    Your Vow</em> and score a strong hit.</div>
                             </div>
                         </div>
                     </div>
@@ -2583,9 +2604,10 @@
                                     founded on a lie, choose one.
                                     <ul>
                                         <li>Keep your secret: Roll +shadow (instead of +heart).</li>
-                                        <li>Reveal the truth: Roll +heart. On a <strong>strong hit,</strong> mark a bond
-                                            twice and take 1
-                                            experience. A weak hit counts as a miss.</li>
+                                        <li>Reveal the truth: Roll +heart. On a
+                                            strong hit, mark a bond twice and
+                                            take 1 experience. A weak hit counts
+                                            as a miss.</li>
                                     </ul>
                                 </div>
                             </div>
