added check for face danger on preview

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -7746,7 +7746,7 @@
         <div class="sheet-move-column">
 
             <input type="radio" class="sheet-face-danger sheet-hidden" id="faceDangerMove" name="attr_movepreview"
-                value="1" />
+                value="1" checked/>
             <div class="sheet-face-danger sheet-hidden-flex sheet-move-outline">
                 <div class="sheet-move-title sheet-move-preview">Face Danger</div>
                 <div class="sheet-move-description">
