--- a/Palladium Fantasy 1E/palladium_fantasy_1e.html
+++ b/Palladium Fantasy 1E/palladium_fantasy_1e.html
@@ -23,7 +23,7 @@
     <input type="radio" class="sheet-equipmentT" name="attr_sheetTab" style="display: none;" value="5" />
     <input type="radio" class="sheet-journalT" name="attr_sheetTab" style="display: none;" value="6" />
     <input type='radio' class='sheet-releaseN' name='attr_sheetTab' style="display: none;" value='7' />
-    <!--Character Sheet Tab-->
+    <!--Statistics Tab-->
     <div class='sheet-character'>
         <div class='statheader-container'>
             <h1>Statistics</h1>
@@ -344,7 +344,7 @@
             </div>
         </div> 
     </div>
-    <!--Character Sheet Tab-->
+    <!--Social Tab-->
     <div class='sheet-social'>
         <h1>Social Information</h1>
         <div class='physical-grid-container'>
@@ -382,7 +382,7 @@
             <textarea class='mental-field' value="" name="attr_character_classnotes" placeholder='Anything about your class that needs kept in mind' /></textarea>
         </div> 
     </div>
-    <!--Character Sheet Tab-->
+    <!--Skills Tab-->
     <div class='sheet-skill'>
         <h1>Skills</h1>
         <div class='universalrow-grid-container'>
@@ -488,7 +488,7 @@
             </div>
         </div> 
     </div>
-    <!--Character Sheet Tab-->
+    <!--Combat Tab-->
     <div class='sheet-combat'>
         <h1>Combat</h1>
         <div class="melee-proficiency-panel">
@@ -669,7 +669,7 @@
             </div>
         </div> 
     </div>
-    <!--Character Sheet Tab-->
+    <!--Equipment Tab-->
     <div class="sheet-equipment">
         <h1>Equipment</h1>
         <div class='encumbrance-panel'>
@@ -810,7 +810,7 @@
             </div>
         </div>
     </div>
-    <!--Character Sheet Tab-->
+    <!--Notes Tab-->
     <div class="sheet-journal">
         <h1>Notes</h1>
         <div class="note-one-panel">
@@ -856,9 +856,19 @@
             </div>
         </div> 
     </div>
+    <!--Release Notes Tab-->
     <div class="sheet-release">
         <h1>Sheet Version: 1.0</h1>
         <h5>Recent Changes:</h5>
+        <ul>
+            <li>Changed the format of the repeating section buttons to fit better with the rest of the sheet.</li>
+            <li>Changed the buttons on the melee and ranged sections to show full labels.</li>
+            <li>Moved the temporary bonus fields to the top of each section and incorporated them into the roll buttons.  Those bonuses now apply to everything in the section under them.</li>
+            <li>Made the input fields larger for regular bonuses to facilitate using row id references to weapon proficiency bonuses, and hid those fields on a second row made visible by a checkbox by each row.</li>
+            <li>Added a notes field for saving throws that will display with every save roll except for Coma/Death.  This was added to provide a place for situational save bonuses that don't cover an entire category, such as the diabolist protection from hate ward.</li>
+            <li>This (I think) wraps up everything I intended to do with the sheet.  This batch of changes live on Feb 18, '20.</li>
+        </ul>
+        <h5>Past Changes:</h5>
         <ul>
             <li>The sheet tabs have been altered to run on sheetworkers.</li>
             <li>The repeating attack entries on the statistics tab are now all text instead of number to allow entry of attributes instead of only numbers.  
@@ -866,7 +876,9 @@
             <li>If there are any issues with the sheetworker tabs, I will revert back to a regular tab system.</li>
             <li>Hopefully this will be the final stabile version of this sheet.</li>
         </ul>
-        <p>For more information on this sheet, check the page dedicated to it on the Roll20 wiki.</p>
+        <p>For more information on this sheet, check the page dedicated to it on the Roll20 wiki or the Readme on Github.  
+        <button type="roll" class="statdice" name="roll_wiki" value="&{template:custom} {{color=black}} {{title=**Information Links**}} {{subtitle=Right Click Link to Open in a New Tab.}} {{desc=[Roll20 Wiki Palladium 1E](https://wiki.roll20.net/Palladium_Fantasy_1E)
+[Github Readme](https://github.com/Roll20/roll20-character-sheets/tree/master/Palladium%20Fantasy%201E)}}" >Info Links</button></p>
     </div>
 </div>
 <script type="text/worker">
