correction of a display bug
Replace some latin characters by their ISO code as the file seems to be in ISO-8859-1.

--- a/Les Chants de Loss/LCDL.html
+++ b/Les Chants de Loss/LCDL.html
@@ -220,7 +220,7 @@
 				<td class='titre' colspan="10"><h4>MODIFICATEURS</h4></td>
 			</tr>
 			<tr>
-				<td>D&#233;gâts</td>
+				<td>D&#233;g&#226;ts</td>
 				<td style="width:33px;"><input type="number" name="attr_modDegats" value="0" min="0"/></td>
 				<td><button type="roll" name="roll_jetInitiative" value="@{typeJet}&{template:talent} {{name=Initiative}} {{resultat=[[1d10+@{modInitiative}-[[@{malus}]]+@{modDivers} ]]}} {{mod=[[@{modDivers}]]}} {{malus=[[@{malus}]]}}" title="Initiative" class="bCDL"></button></td>
 				<td style="width:33px;"><input type="number" name="attr_modInitiative" value="floor((@{valueagilite}+@{valueinstinct})/2)" disabled /></td>
@@ -651,7 +651,7 @@
 				</div>
 				<div class="hideBlock">
 					<div class="talentSubColumn width110">
-						<button type="roll" name="roll_jetArmesDeMelee" value="@{typeJet}&{template:talent} {{name=Armes de mêl&#233;e}} {{spe=@{speArmesDeMelee}}} {{resultat=[[{1d10!}kh2+@{scoreArmesDeMelee}+@{Honneur}+?{Trait|Puissance,@{valuepuissance}|Agilit&#233;,@{valueagilite}|Pouvoir,@{valuepouvoir}|Empathie,@{valueempathie}|Esprit,@{valueesprit}|Instinct,@{valueinstinct}}-[[@{malus}]]+@{modDivers} ]]}} {{mod=[[@{modDivers}]]}} {{malus=[[@{malus}]]}}" title="Armes de mêl&#233;e" class="bTalent"></button>
+						<button type="roll" name="roll_jetArmesDeMelee" value="@{typeJet}&{template:talent} {{name=Armes de m&#234;l&#233;e}} {{spe=@{speArmesDeMelee}}} {{resultat=[[{1d10!}kh2+@{scoreArmesDeMelee}+@{Honneur}+?{Trait|Puissance,@{valuepuissance}|Agilit&#233;,@{valueagilite}|Pouvoir,@{valuepouvoir}|Empathie,@{valueempathie}|Esprit,@{valueesprit}|Instinct,@{valueinstinct}}-[[@{malus}]]+@{modDivers} ]]}} {{mod=[[@{modDivers}]]}} {{malus=[[@{malus}]]}}" title="Armes de m&#234;l&#233;e" class="bTalent"></button>
 					</div>
 					<div class="talentSubColumn width114">
 						<input type="text" value="" name="attr_speArmesDeMelee" class="talentInputSpe width114" />
@@ -2235,7 +2235,7 @@
 			</div>
 			<div class="hideBlock">
 				<div class="talentSubColumn width110">
-					<button type="roll" name="roll_jetArmesDeMelee" value="@{typeJet}&{template:talent} {{name=Armes de mêl&#233;e}} {{spe=@{speArmesDeMelee}}} {{resultat=[[{1d10!}kh2+@{scoreArmesDeMelee}+@{Honneur}+?{Trait|Puissance,@{valuepuissance}|Agilit&#233;,@{valueagilite}|Pouvoir,@{valuepouvoir}|Empathie,@{valueempathie}|Esprit,@{valueesprit}|Instinct,@{valueinstinct}}-[[@{malus}]] ]]}} {{malus=[[@{malus}]]}}" title="Armes de mêl&#233;e" class="bTalent"></button>
+					<button type="roll" name="roll_jetArmesDeMelee" value="@{typeJet}&{template:talent} {{name=Armes de m&#234;l&#233;e}} {{spe=@{speArmesDeMelee}}} {{resultat=[[{1d10!}kh2+@{scoreArmesDeMelee}+@{Honneur}+?{Trait|Puissance,@{valuepuissance}|Agilit&#233;,@{valueagilite}|Pouvoir,@{valuepouvoir}|Empathie,@{valueempathie}|Esprit,@{valueesprit}|Instinct,@{valueinstinct}}-[[@{malus}]] ]]}} {{malus=[[@{malus}]]}}" title="Armes de m&#234;l&#233;e" class="bTalent"></button>
 				</div>
 				<div class="talentSubColumn width114">
 					<input type="text" value="" name="attr_speArmesDeMelee" class="talentInputSpe width114" />
@@ -2352,7 +2352,7 @@
 			</div>
 		{{/limite}}
 		<div class="line">
-			<div class="lLeftTitle"><b>D&#233;gâts</b></div>
+			<div class="lLeftTitle"><b>D&#233;g&#226;ts</b></div>
 			<div class="lRightInput">{{degats}}</div>
 		</div>
 		{{#notes}}
