--- a/Shadowrun5thEdition/src/options.html
+++ b/Shadowrun5thEdition/src/options.html
@@ -13,8 +13,8 @@
 					<hr />
 					<div>
 						<h2 data-i18n="sheetselect">Sheet Select</h2><br />
-						<select name="attr_sheet_type" title="@{sheet_type}">
-							<option value="pc" data-i18n="pc">PC</option>
+						<select name="attr_sheet_type" title="@{sheet_type}" value='pc'>
+							<option value="pc" data-i18n="pc" selected>PC</option>
 							<option value="grunt" data-i18n="grunt">grunt</option>
 							<option value="host" data-i18n="host">Host</option>
 							<option value="sprite" data-i18n="sprite">Sprite</option>
