Update Warhammer 4e Character Sheet.html
Ranged Weapon SB? check box disabled fixed

--- a/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.html
+++ b/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.html
@@ -4103,7 +4103,7 @@
 								<input type="number" name="attr_RangedBonus" value="0" />
 							</div>
 							<div class="sheet-col-1-25 sheet-pad-r-sm sheet-center">
-								<input type="checkbox" name="attr_RangedStrengthBonus" value="@{StrengthBonus}" disabled="disabled" />
+								<input type="checkbox" name="attr_RangedStrengthBonus" value="@{StrengthBonus}" />
 							</div>
 							<div class="sheet-col-1-25 sheet-pad-r-sm sheet-center">
 								<input class="sheet-center" type="number" name="attr_RangedDamage" value="0" />
