--- a/Ryuutama/Ryuutama.html
+++ b/Ryuutama/Ryuutama.html
@@ -695,94 +695,135 @@
                 </span>
 
                 <span class='characterStats'>
-                    <div class='sheet-3colrow'>
-                        <div class='sheet-col'>
-                            <label class='headerLabel healthLabel'>Health Points</label>
+                    <div class="hpmpgrid">
+                        <div class="hpInfo"><div class="flex hpmpHeader">Hit Points</div></div>
+                        <div class="hp">
+                            <img src="https://i.imgur.com/aHmT47V.png" alt="whiteheart" class="icon">
                             <input type='checkbox' class='penaltyCondition' name='attr_hpUnconscious' value='1'/>
                             <input type='checkbox' class='deathCondition' name='attr_hpDeath' value='1'/>
-                            <input type='number' class='stats' name='attr_healthPoints' value='8'/> / <input type='number' class='stats' name='attr_healthPoints_max' value='8' min='1'/>
+                            <input type='number' class='stats' name='attr_healthPoints' value='8'/> / 
+                            <input type='number' class='stats' name='attr_healthPoints_max' value='8' min='1'/>
                         </div>
-                        <div class='sheet-col'>
-                            <label class='headerLabel healthLabel'>Mental Points</label>
+                        <div class="mpInfo"><div class="flex hpmpHeader">Mental Points</div></div>
+                        <div class="mp">
+                            <img src="https://i.imgur.com/Ha2CG5u.png" alt="sevenpointstar" class="icon">
                             <input type='checkbox' class='penaltyCondition' name='attr_mpUnconscious' value='1'/>
-                            <input type='number' class='stats' name='attr_mentalPoints' value='8' min='0'/> / <input type='number' class='stats' name='attr_mentalPoints_max' value='8' min='1'/>
+                            <input type='number' class='stats' name='attr_magicPoints' value='8' min='0'/> / 
+                            <input type='number' class='stats' name='attr_magicPoints_max' value='8' min='1'/>
                         </div>
-                        <div class='sheet-col'>
-                            <label class='headerLabel healthLabel'>Condition</label>
-                            <span class='conditionCheck'>
-                            <input type='checkbox' class='penaltyCondition' name='attr_outOfShape' value='1'/>
-                            <input type='checkbox' class='deathCondition' name='attr_conditionDeath' value='1'/>
-                            <input type='checkbox' class='bonusCondition' name='attr_tipTopShape' value='1'/>
-                            <input type='number' name='attr_condition' value='5'/>
-                            Bonus to:
-                            <select name="attr_bonus" class='attributeType'>
+                        <div class="condInfo"><div class="flex hpmpHeader">Condition - If >=10 add 1 dice size to:
+                            <select name="attr_bonus" class='condAttribute'>
                                 <option value=''></option>
                                 <option value='STR'>STR</option>
                                 <option value='DEX'>DEX</option>
                                 <option value='INT'>INT</option>
                                 <option value='SPI'>SPI</option>
                             </select>
-                            if >=10
-                            </span>
+                        </div></div>
+                        <div class="condition flex">
+                            <img src="https://i.imgur.com/rnX67uJ.png" alt="condition" class="icon">
+                            <label class="flex-column condionBar">2<input type="radio" name="attr_condition" value="2"></label>
+                            <label class="flex-column condionBar">3<input type="radio" name="attr_condition" value="3"></label>
+                            <label class="flex-column condionBar">4<input type="radio" name="attr_condition" value="4"></label>
+                            <label class="flex-column condionBar">5<input type="radio" name="attr_condition" value="5"></label>
+                            <label class="flex-column condionBar">6<input type="radio" name="attr_condition" value="6"></label>
+                            <label class="flex-column condionBar">7<input type="radio" name="attr_condition" value="7"></label>
+                            <label class="flex-column condionBar">8<input type="radio" name="attr_condition" value="8"></label>
+                            <label class="flex-column condionBar">9<input type="radio" name="attr_condition" value="9"></label>
+                            <label class="flex-column condionBar">10<input type="radio" name="attr_condition" value="10">&#9733;</label>
+                            <label class="flex-column condionBar">11<input type="radio" name="attr_condition" value="11"></label>
+                            <label class="flex-column condionBar">12<input type="radio" name="attr_condition" value="12"></label>
+                            <label class="flex-column condionBar">13<input type="radio" name="attr_condition" value="13"></label>
+                            <label class="flex-column condionBar">14<input type="radio" name="attr_condition" value="14"></label>
+                            <label class="flex-column condionBar">15<input type="radio" name="attr_condition" value="15"></label>
+                            <label class="flex-column condionBar">16<input type="radio" name="attr_condition" value="16"></label>
+                            <label class="flex-column condionBar">17<input type="radio" name="attr_condition" value="17"></label>
+                            <label class="flex-column condionBar">18<input type="radio" name="attr_condition" value="18"></label>
+                            <label class="flex-column condionBar">19<input type="radio" name="attr_condition" value="19"></label>
+                            <label class="flex-column condionBar">20<input type="radio" name="attr_condition" value="20"></label>
                         </div>
-                    </div>
+                    </div> 
+
                     <hr>
-                    <div class='coreAttributes'>
-                        <div class='sheet-col'>
-                            <label class='headerLabel attrLabel'>Strength</label>
-                            Base:
-                            <select name="attr_str" class="dtype">
-                                <option value="4">d4</option>
-                                <option value="6">d6</option>
-                                <option value="8">d8</option>
-                                <option value="10">d10</option>
-                                <option value="12">d12</option>
-                            </select>
-                            Current:
-                            <input type='number' name='attr_currentStr' value='4' min='4' step='2' max='12'/>
-                        </div>
-                        <div class='sheet-col'>
-                            <label class='headerLabel attrLabel'>Dexterity</label>
-                            Base:
-                            <select name="attr_dex" class="dtype">
-                                <option value="4">d4</option>
-                                <option value="6">d6</option>
-                                <option value="8">d8</option>
-                                <option value="10">d10</option>
-                                <option value="12">d12</option>
-                            </select>
-                            Current:
-                            <input type='number' name='attr_currentDex' value='4' min='4' step='2' max='12'/>
-                        </div>
-                    </div>
 
                     <div class='coreAttributes'>
-                        <div class='sheet-col'>
-                            <label class='headerLabel attrLabel'>Intelligence</label>
-                            Base:
-                            <select name="attr_int" class="dtype">
-                                <option value="4">d4</option>
-                                <option value="6">d6</option>
-                                <option value="8">d8</option>
-                                <option value="10">d10</option>
-                                <option value="12">d12</option>
-                            </select>
-                            Current:
-                            <input type='number' name='attr_currentInt' value='4' min='4' step='2' max='12'/>
-                        </div>
-                        <div class='sheet-col'>
-                            <label class='headerLabel attrLabel'>Spirit</label>
-                            Base:
-                            <select name="attr_spi" class="dtype">
-                                <option value="4">d4</option>
-                                <option value="6">d6</option>
-                                <option value="8">d8</option>
-                                <option value="10">d10</option>
-                                <option value="12">d12</option>
-                            </select>
-                            Current:
-                            <input type='number' name='attr_currentSpi' value='4' min='4' step='2' max='12'/>
-                        </div>
+                            <div class="str">
+                                    <div class="coreStatGrid">
+                                       <div class="coreStatText">STR</div>
+                                       <div class="coreStatBaseDie flex-column"> 
+                                           <select name="attr_str" class="dtype">
+                                               <option value="4">d4</option>
+                                               <option value="6">d6</option>
+                                               <option value="8">d8</option>
+                                               <option value="10">d10</option>
+                                               <option value="12">d12</option>
+                                           </select>
+                                           <span>Base</span>
+                                       </div>
+                                       <div class="coreStatCurrentDie flex-column">
+                                           <input type='number' name='attr_currentStr' value='4' min='4' step='2' max='12'/>
+                                           <span>Current</span>
+                                       </div>
+                                   </div> 
+                               </div>
+                               
+                               <div class="dex">
+                                   <div class="coreStatGrid">
+                                       <div class="coreStatText">DEX</div>
+                                       <div class="coreStatBaseDie flex-column"> 
+                                           <select name="attr_dex" class="dtype">
+                                               <option value="4">d4</option>
+                                               <option value="6">d6</option>
+                                               <option value="8">d8</option>
+                                               <option value="10">d10</option>
+                                               <option value="12">d12</option>
+                                           </select>
+                                           <span>Base</span>
+                                       </div>
+                                       <div class="coreStatCurrentDie flex-column">
+                                           <input type='number' name='attr_currentDex' value='4' min='4' step='2' max='12'/>
+                                           <span>Current</span>
+                                       </div>
+                                   </div> 
+                               </div>
+                               <div class="int">
+                                    <div class="coreStatGrid">
+                                       <div class="coreStatText">INT</div>
+                                       <div class="coreStatBaseDie flex-column"> 
+                                           <select name="attr_int" class="dtype">
+                                               <option value="4">d4</option>
+                                               <option value="6">d6</option>
+                                               <option value="8">d8</option>
+                                               <option value="10">d10</option>
+                                               <option value="12">d12</option>
+                                           </select>
+                                           <span>Base</span>
+                                       </div>
+                                       <div class="coreStatCurrentDie flex-column">
+                                           <input type='number' name='attr_currentInt' value='4' min='4' step='2' max='12'/>
+                                           <span>Current</span>
+                                       </div>
+                                   </div> 
+                               </div>
+                               <div class="spi">
+                                    <div class="coreStatGrid">
+                                       <div class="coreStatText">SPI</div>
+                                       <div class="coreStatBaseDie flex-column"> 
+                                           <select name="attr_spi" class="dtype">
+                                               <option value="4">d4</option>
+                                               <option value="6">d6</option>
+                                               <option value="8">d8</option>
+                                               <option value="10">d10</option>
+                                               <option value="12">d12</option>
+                                           </select>
+                                           <span>Base</span>
+                                       </div>
+                                       <div class="coreStatCurrentDie flex-column">
+                                           <input type='number' name='attr_currentSpi' value='4' min='4' step='2' max='12'/>
+                                           <span>Current</span>
+                                       </div>
+                                   </div> 
+                               </div>
                     </div>
                     <hr>
                     <div class='sheet-3colrow'>
