[Anima Beyond Fantasy] Bugfix

--- a/Anima-Beyond-Fantasy/A-BF.html
+++ b/Anima-Beyond-Fantasy/A-BF.html
@@ -2978,7 +2978,8 @@
 				
 				setAttrs({
 					lp:lpOld,
-					fatigue:fatigueOld				
+					fatigue:fatigueOld,
+					update_1:1
 				});
 			}
 		});
