(Ironsworn) fixed missing swift

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -13074,7 +13074,7 @@
                     </div>
                     <div class="oracle-row sheet-oracle-row">
                         <span class="sheet-oracle-roll">17-20</span>
-                        <span class="sheet-oracle-result">t</span>
+                        <span class="sheet-oracle-result">Swift</span>
                     </div>
                     <div class="oracle-row sheet-oracle-row">
                         <span class="sheet-oracle-roll">21-24</span>
