--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -8409,7 +8409,7 @@
 						<!--Battle--><div class="sheet-csnItem"><label class="sheet-csnLabel" data-i18n="battle">Battle</label> = <input type="text" class="sheet-csnInput" name="attr_battlename" value="" /></div>
 						<!--Boating--><div class="sheet-csnItem"><label class="sheet-csnLabel" data-i18n="boating">Boating</label> = <input type="text" class="sheet-csnInput" name="attr_boatingname" value="" /></div>
 						<!--Climbing--><div class="sheet-csnItem"><label class="sheet-csnLabel" data-i18n="climbing">Climbing</label> = <input type="text" class="sheet-csnInput" name="attr_climbingname" value="" /></div>
-						<!--Common Knowledge--><div class="sheet-csnItem"><label class="sheet-csnLabel" data-i18n="commonknowledge">Common Knowledge</label> = <input type="text" class="sheet-csnInput" name="attr_commonknowledge" value="" /></div>
+						<!--Common Knowledge--><div class="sheet-csnItem"><label class="sheet-csnLabel" data-i18n="commonknowledge">Common Knowledge</label> = <input type="text" class="sheet-csnInput" name="attr_commonknowledgename" value="" /></div>
 						<!--Driving--><div class="sheet-csnItem"><label class="sheet-csnLabel" data-i18n="driving">Driving</label> = <input type="text" class="sheet-csnInput" name="attr_drivingname" value="" /></div>
 						<!--Electronics--><div class="sheet-csnItem"><label class="sheet-csnLabel" data-i18n="electronics">Electronics</label> = <input type="text" class="sheet-csnInput" name="attr_electronicsname" value="" /></div>
 						<!--Faith--><div class="sheet-csnItem"><label class="sheet-csnLabel" data-i18n="faith">Faith</label> = <input type="text" class="sheet-csnInput" name="attr_faithname" value="" /></div>
