--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -1482,10 +1482,10 @@
 					<input type="radio" class="sheet-Reactor" name="attr_shipReactor" value="7" /><span></span>
 					<input type="radio" class="sheet-Reactor" name="attr_shipReactor" value="8" /><span></span>
 				</div>
-				<h4 class="systemListTitle">Charge:</h4>
-				<div class="systemListMod1"><input type="number" name="attr_ReactorCharge" min="0" max="8" class="sheet-full" /></div>
-				<div class="systemListPips1">Overcharge: </div>
-				<div class="systemListPips3"><input type="checkbox" class="sheet-Overcharge" name="attr_ReactorOvercharge" /><span></span></div>
+				<div class="systemChargeTitle">Charge:</div>
+				<div class="systemChargeBox"><input type="number" name="attr_ReactorCharge" min="0" max="8" class="currentCharge" /></div>
+				<div class="systemOverchargeTitle">Overcharge: </div>
+				<div class="systemOverchargeSymbol"><input type="checkbox" class="sheet-Overcharge" name="attr_ReactorOvercharge" /><span></span></div>
 			</div>
 			<!--Sensors-->
 			<div class="shipSystem system">
@@ -1565,8 +1565,8 @@
 			<!--Data Storage-->
 			<div class="dataStorage system">
 				<div class="systemTitle">Data Storage</div>
-				<div class="systemDetail">AI:&emsp;<input type="text" name="attr_AI" class="sheet-most" /></div>
-				<div class="systemListTitle"><textarea name="attr_data" class="sheet-data"></textarea></div>
+				<div class="systemAIName">AI:&emsp;<input type="text" name="attr_AI" class="sheet-most" /></div>
+				<div class="systemDataBox"><textarea name="attr_data" class="sheet-data"></textarea></div>
 			</div>
 			<!--Pulse Array-->
 			<div class="pulseArray system">
@@ -1643,7 +1643,7 @@
 	</div>
 	<!--Ship Modules-->
 	<div class="sheet-row700">
-		<h2 class="subtitlesWide">Ship Modules</h2>
+		<h2 class="subtitlesFull">Ship Modules</h2>
 		<!--Laboratories-->
 		<div class="sheet-columnLeft">
 			<h3>Laboratories</h3>
