--- a/ButterflyAspect/ButterflyAspect.html
+++ b/ButterflyAspect/ButterflyAspect.html
@@ -164,7 +164,7 @@
 				<div><input type="number" name="attr_skill" value="0" /></div>
 				<div><input type="number" name="attr_skill_mod" value="0" /></div>
 				<div><input type="number" name="attr_pp" value="0" /></div>
-				<div><button type="roll" name="roll_skill" value="@{abilityroll} würfelt @{skillname} mit dem Ergebniss [[(@{attribut} + @{skill})d10!!kh@{attribut} + @{skill_mod} + ?{Modifier?|0}]]"></button></div>
+				<div><button type="roll" name="roll_skill" value="@{abilityroll} würfelt @{skillname} mit dem Ergebnis [[(@{attribut} + @{skill})d10!!kh@{attribut} + @{skill_mod} + ?{Modifier?|0}]]"></button></div>
 			</fieldset>
 		</div>
 	</div>
