Update Warhammer 4e Character Sheet.html

--- a/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.html
+++ b/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.html
@@ -11799,7 +11799,7 @@
 				
 			<div class="sheet-row sheet-spell-header">
 				<div class="sheet-col-9-10 sheet-vert-bottom sheet-center sheet-small-label">
-					<span>Advantage Limit Rule (NPC tab  has seperate R1/R2 selector, no custom))</span>
+					<span>Advantage Limit Rule (NPC tab  has seperate R1/R2 selector, no custom)</span>
 				</div>
 				<div class="sheet-col-1-10 sheet-vert-bottom sheet-center sheet-small-label">
 					<span>Custom</span>
